# rag-chatbot

./: .gitignore  README.md  app.py  config.json  main.py  main_app.py  prompts.json  pyproject.toml  requirements.txt  setup.py
chatbot/: chatbot_engine.py  main.py  run.py  workflow.ipynb
database/: create_db.py  pdf_processor.py  preprocessor.py  utilities.py  vector_db.py
database/data/: constitution-upto-18th-filtered.text
setup/: setup.py
