[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.8",
    "pymupdf>=1.26.4",
    "streamlit>=1.50.0",
]
